<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reto2.ui.home.HomeFragment"
        android:label="@string/menu_Home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.reto2.ui.productos.ProductosFragment"
        android:label="@string/menu_Productos"
        tools:layout="@layout/fragment_producto" />

    <fragment
        android:id="@+id/nav_tienda"
        android:name="com.example.reto2.ui.tiendas.TiendaFragment"
        android:label="@string/menu_Tienda"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.reto2.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />
</navigation>