<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemFavorito"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="favoritos"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/itemCompartir"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="compartir"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_submenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add"
                android:orderInCategory="100"
                android:title="@string/action_add"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_update"
                android:orderInCategory="100"
                android:title="@string/action_update"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_delete"
                android:orderInCategory="100"
                android:title="@string/action_delete"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>